# onderzoeksemester_18-19

./: README.txt
Deliverables/Afbeeldingen/: Workspace Makefile indeling.xcf
Deliverables/Documents/Feedback/: Feedback Huib + Jorn.docx  Feedback Wouter.docx
Deliverables/Documents/Naslagwerk/: Checklist Theoretisch Kader.docx  [TEMPLATE] Methodenmatrix.docx
Deliverables/Documents/Onderzoek/: Dafuq heb ik gedaan tijdens het onderzoek.docx  Deelvraag analyse.docx  Microcontrollers met Wifi en of bluetooth.docx  Tabellen Keuze Microcontrollers.docx
Deliverables/Documents/Onderzoek + Concepten/: Conclusie concept.docx  Impelentatie impact.docx  Management samenvatting.docx  Onderzoek orginele bouwsysteem van espressif.docx  Realisatie stappen Proof of Concept.docx  Tabellen Keuze Microcontrollers.docx  [Specificaties] ESP32 tegen Arduino Due.docx
Deliverables/Documents/Plan van Aanpak/: Aanpak stappen ontwikkeling ESP-32 library.docx  Methode Pad onderzoeksemester.docx  Plan van Aanpak.docx  ~$an van Aanpak.docx
Deliverables/Documents/Publications/: Onderzoeksverslag v1.0.1.docx
Deliverables/Poster/: research pooooster .pptx
Deliverables/Presentatie/: Presentatie Onderzoek 2018-2019.pptx  Transcript presentatie.docx
Deliverables/Publications/: Onderzoeksverslag v1.0.8.docx  Onderzoeksverslag v2.0.0.docx
Workspace/: Makefile.esp32
Workspace/hello_world/: CMakeLists.txt  Makefile  start.bat
Workspace/hello_world/main/: hello_world_main.c
ti-software/: README.txt
ti-software/modified_bmptk/: Makefile.inc
(+67 files in other folders)
